hphp/hack/test/typecheck/disable_legacy_refinement/primitives.php.exp
File "primitives.php", line 5, characters 17-18:
Invalid argument (Typing[4110])
  File "primitives.php", line 18, characters 22-25:
  This is a bool
  File "primitives.php", line 3, characters 12-16:
  It is incompatible with a mixed value
File "primitives.php", line 8, characters 18-19:
Invalid argument (Typing[4110])
  File "primitives.php", line 19, characters 23-27:
  This is a float
  File "primitives.php", line 3, characters 12-16:
  It is incompatible with a mixed value
File "primitives.php", line 11, characters 16-17:
Invalid argument (Typing[4110])
  File "primitives.php", line 20, characters 21-23:
  This is an int
  File "primitives.php", line 3, characters 12-16:
  It is incompatible with a mixed value
File "primitives.php", line 14, characters 19-20:
Invalid argument (Typing[4110])
  File "primitives.php", line 21, characters 24-29:
  This is a string
  File "primitives.php", line 3, characters 12-16:
  It is incompatible with a mixed value
